@@ -1,3 +1,8 @@
+2006-12-02  Chris Taylor  <chris@icculus.org>
+
+	* texmap/scanline.c: divide negative light rates of change
+	properly (fix bug #2575)
+
 2006-12-01  Chris Taylor  <chris@icculus.org>
 
 	* main/weapon.c: only autoselect a secondary weapon if the player
